PROJECT (T-SIM)

FIND_PACKAGE(SDL)
FIND_PACKAGE(OpenGL)
INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
LINK_LIBRARIES(${SDL_LIBRARY})
LINK_LIBRARIES(${OPENGL_LIBRARY})

INCLUDE_DIRECTORIES(
Simulation
Simulation/Input
Simulation/Output
Simulation/Output/Views
Simulation/Output/Helicopter
Simulation/Output/Helicopter/Instruments
Simulation/Output/Terrain
Simulation/Output/Sky
Simulation/World
Simulation/World/Sky
Simulation/World/Terrain
Simulation/World/Helicopter
Simulation/World/FlightModels
Simulation/Math
)

ADD_EXECUTABLE(T-Sim 
Simulation/Math/Conversions.cpp
Simulation/Input/InputManager.cpp
Simulation/Output/Color.cpp
Simulation/Output/Camera.cpp
Simulation/Output/Views/ExternalView.cpp
Simulation/Output/Views/CockpitView.cpp
Simulation/Output/Views/InstrumentsView.cpp
Simulation/Output/Helicopter/HelicopterRepresentation.cpp
Simulation/Output/Helicopter/RotorRepresentation.cpp
Simulation/Output/Helicopter/Instruments/ArtificialHorizonRepresentation.cpp
Simulation/Output/Helicopter/Instruments/CompassRepresentation.cpp
Simulation/Output/Helicopter/Instruments/InstrumentPanelRepresentation.cpp
Simulation/Output/Helicopter/Instruments/InstrumentRepresentation.cpp
Simulation/Output/Helicopter/Instruments/NeedleInstrumentRepresentation.cpp
Simulation/Output/Helicopter/Instruments/NeedleRepresentation.cpp
Simulation/Output/NumberRepresentation.cpp
Simulation/Output/OutputManager.cpp
Simulation/Output/Terrain/TerrainRepresentation.cpp
Simulation/Output/Terrain/TerrainHouseRepresentation.cpp
Simulation/Output/Terrain/TerrainTreeRepresentation.cpp
Simulation/Output/Terrain/TerrainTileRepresentation.cpp
Simulation/Output/Sky/SkyRepresentation.cpp
Simulation/Output/Sky/CloudRepresentation.cpp
Simulation/World/FlightModels/SimpleFlightModel.cpp
Simulation/World/Sky/Sky.cpp
Simulation/World/Sky/Cloud.cpp
Simulation/World/Terrain/TerrainTileStore.cpp
Simulation/World/Terrain/TerrainTile.cpp
Simulation/World/Terrain/Terrain.cpp
Simulation/World/Terrain/TerrainHouse.cpp
Simulation/World/Terrain/TerrainTree.cpp
Simulation/World/Helicopter/Helicopter.cpp
Simulation/World/Helicopter/AirPressureIndicator.cpp
Simulation/World/Helicopter/Compass.cpp
Simulation/World/Helicopter/Rotor.cpp
Simulation/World/Helicopter/Instrument.cpp
Simulation/World/Helicopter/AltitudeIndicator.cpp
Simulation/World/Helicopter/ArtificialHorizon.cpp
Simulation/World/Helicopter/ClimbIndicator.cpp
Simulation/World/Helicopter/NeedleInstrument.cpp
Simulation/World/Helicopter/InstrumentPanel.cpp
Simulation/World/Helicopter/AirspeedIndicator.cpp
Simulation/World/Helicopter/RPMIndicator.cpp
Simulation/World/Helicopter/Needle.cpp
Simulation/World/Helicopter/ColorIndication.cpp
Simulation/World/World.cpp
Simulation/Simulation.cpp
Simulation/Math/Vector3D.cpp
T-Sim.cpp
)
